Updated ?n=6. Fixed issue where strike-through causes previous sentence to wrap before necessary.

--- a/resources/styles/home.scss
+++ b/resources/styles/home.scss
@@ -17,7 +17,7 @@ body {
 .border {
     position: absolute;
     top: 10px;
-    bottom: 10px;
+    bottom: 10px; 
     left: 10px;
     right: 10px;
     border: 3px solid black;
@@ -25,6 +25,10 @@ body {
 
 .flex {
     display: flex;
+}
+
+.wrap {
+    flex-wrap: wrap;
 }
 
 .align-center {
